[package]
name = "pushbox"
version = "0.1.0"
authors = ["Korbin fly92727@outlook.com"]
edition = "2021"


[dependencies]
bevy = { version = "0.13.2", features = ["wayland"] }
serde = "1.0.203"
thiserror = "1.0.61"
bevy_utils = "0.13.2"
wasm-bindgen = "0.2.92"

[profile.release]
opt-level = 'z'
lto = true
debug = false
codegen-units = 1
panic = "abort"
